# FR-RL-lerobot

./: .gitignore  README.md  environment.yaml  pyproject.toml
assets/: panda.xml  pick_place_safe_scene.xml  scene.xml
configs/: encoder_bias_all_joints_medium.yaml  encoder_bias_joint4_fixed_0.1.yaml  encoder_bias_joint4_fixed_0.3.yaml  encoder_bias_joint4_fixed_0.5.yaml  encoder_bias_joint4_random.yaml  encoder_bias_none.yaml  record_demo_backup.json  record_demo_safe_bias.json  record_demo_task_bias.json  train_hil_sac_backup.json  train_hil_sac_backup_s1.json  train_hil_sac_backup_s1_tracking.json  train_hil_sac_backup_s1_tracking_combo.json  train_hil_sac_backup_s2.json  train_hil_sac_safe_bias.json  train_hil_sac_safe_bias_obs28.json  train_hil_sac_task_bias_obs24.json  train_hil_sac_task_bias_obs27.json  train_task_policy_franka.json
demos/: README.md  demo_continuous_loop.py  demo_hardcoded_pick_place.py  demo_optimized_trajectory.py  demo_repeat_trajectory.py
docs/: backup_policy.md  backup_policy_deployment.md  data_flow.md  fault_injection_architecture.md  fault_injection_realhw.md  fault_simulation_design.md  project_progress.md  real_robot_deployment_plan.md  rl_reward.md  rt_pc_runbook.md  sim_exp_data.md  spacemouse_teleop.md  task_policy_training.md
frrl/: __init__.py  fault_injection.py  trajectory_executor.py
patches/: README.md  serl_franka_controllers_bias_injection.patch
scripts/: calibrate_cam_to_robot.py  check_backup_env.py  check_camera_views.py  collect_demo_task_policy.py  compute_dataset_stats.py  deploy_backup_policy.py  test_d455.py  (+16 more)
(+223 files in other folders)
